<resources>

    <string name="demo_title_pattern" formatted="false">%s - %s</string>
    <string name="app_name">SidebarMenu</string>
    <string name="simple_demo_name">Simple Demo</string>
    <string name="git_repository">Git Repository</string>
    <string name="empty"></string>
    <string name="wp0">Wallpaper 1</string>
    <string name="wp1">Wallpaper 2</string>
    <string name="wp2">Wallpaper 3</string>
    <string name="debug_mode">Debug Mode</string>
    <string name="sidebar_mode">Sidebar Slided</string>
    <string name="content_mode">Content Slided</string>
    <string name="sidebar_hierarchy">Sidebar Over Content</string>
    <string name="view_from_code_demo_name">View From Code Demo</string>
    <string name="align_demo_name">Align Demo</string>
    <string name="align">"Align: "</string>
    <string name="attach_type">"Attach Type: "</string>
    <string name="interpolator">"Interpolator: "</string>
    <string name="sidebar_size_pattern" formatted="false">"Sidebar size (%d%%): "</string>
    <string name="sidebar_offset_pattern" formatted="false">"Sidebar offset (%d%%): "</string>
    <string name="toggle_sidebar">Toggle Sidebar</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="top">Top</string>
    <string name="bottom">Bottom</string>
    <string name="attach_content">Content</string>
    <string name="attach_window">Window</string>

    <string-array name="align">
        <item>@string/left</item>
        <item>@string/top</item>
        <item>@string/right</item>
        <item>@string/bottom</item>
    </string-array>

    <string-array name="attach_type">
        <item>@string/attach_content</item>
        <item>@string/attach_window</item>
    </string-array>
    
    
    <string name="sidebar_opened">Sidebar Opened</string>
    <string name="sidebar_closed">Sidebar Closed</string>
    <string name="register_sidebar_listener">Register Sidebar Listener</string>
    <string name="close_sidebar_on_freespace_tap">Close Sidebar on free space tap</string>
    <string name="allow_drag_to_open">Allow drag to open</string>

</resources>